# sdkwork-im

./: $null  .dockerignore  .env.postgres.example  .gitignore  .gitmodules  .tmp-verify-output.txt  AGENTS.md  COMMERCIAL-LICENSE.md  Cargo.toml  DATABASE_SPEC.md  LICENSE  README.md  build-output.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tmp_check_tables.mjs  tmp_clean_test_data.mjs
.github/: dependabot.yml
adapters/iot-access-local/: Cargo.toml  README.md
adapters/iot-access-local/specs/: README.md  component.spec.json
adapters/iot-access-local/src/: lib.rs
adapters/iot-access-local/tests/: adapter_contract_test.rs
adapters/local-disk/: Cargo.toml  README.md
adapters/local-disk/specs/: README.md  component.spec.json
adapters/local-disk/src/: iot.rs  journal.rs  lib.rs  metadata.rs  ops.rs  projection.rs  realtime.rs  shared.rs  state.rs  storage.rs  tests.rs
adapters/local-disk/tests/: lib_structure_test.rs  storage_port_test.rs
adapters/local-memory/: Cargo.toml  README.md
adapters/local-memory/specs/: README.md  component.spec.json
adapters/local-memory/src/: lib.rs
adapters/local-memory/tests/: local_memory_adapter_test.rs
adapters/object-storage-s3/: Cargo.toml  README.md
adapters/object-storage-s3/specs/: README.md  component.spec.json
adapters/object-storage-s3/src/: lib.rs
adapters/object-storage-s3/tests/: adapter_contract_test.rs
adapters/postgres-journal/: Cargo.toml  README.md
adapters/postgres-journal/src/: aggregate_store.rs  lib.rs  message_store.rs  outbox_store.rs  retention_cleanup.rs  retention_metrics.rs  retention_reconcile.rs  retention_scheduler.rs  search_store.rs
adapters/postgres-journal/tests/: append_live_integration_test.rs
adapters/postgres-projection/: Cargo.toml  README.md
adapters/postgres-projection/src/: lib.rs  metadata_store.rs  timeline_store.rs
adapters/postgres-projection/tests/: postgres_projection_live_integration_test.rs
adapters/postgres-realtime/: Cargo.toml  README.md
adapters/postgres-realtime/specs/: README.md  component.spec.json
adapters/postgres-realtime/src/: lib.rs  route_store.rs
adapters/postgres-realtime/tests/: postgres_realtime_checkpoint_store_test.rs  postgres_realtime_live_integration_test.rs
adapters/postgres-rtc-state/: Cargo.toml  README.md
adapters/postgres-rtc-state/src/: lib.rs
adapters/redis-cache/: Cargo.toml  README.md
adapters/redis-cache/src/: cluster_bus.rs  config.rs  inbox_cache.rs  lib.rs  presence_cache.rs  realtime_checkpoint_store.rs  realtime_event_store.rs  route_store.rs  rtc_state_store.rs  seq_allocator.rs  session_cache.rs  timeline_cache.rs  typing_cache.rs  unread_cache.rs
adapters/rtc-tencent/: Cargo.toml
adapters/rtc-tencent/specs/: README.md  component.spec.json
adapters/rtc-tencent/src/: lib.rs
adapters/rtc-tencent/tests/: adapter_contract_test.rs
adapters/social-postgres/: Cargo.toml  README.md
adapters/social-postgres/src/: config.rs  direct_chat_store.rs  external_store.rs  friend_request_store.rs  friendship_store.rs  lib.rs  organization_store.rs  shared_channel_store.rs  user_block_store.rs  user_profile_store.rs  user_settings_store.rs
crates/craw-chat-ccp-codec-cbor/: Cargo.toml  README.md
crates/craw-chat-ccp-codec-cbor/specs/: README.md  component.spec.json
crates/craw-chat-ccp-codec-cbor/src/: lib.rs
crates/craw-chat-contract-agent/: Cargo.toml  README.md
crates/craw-chat-contract-agent/specs/: README.md  component.spec.json
crates/craw-chat-contract-agent/src/: lib.rs
crates/craw-chat-runtime-link/: Cargo.toml  README.md
crates/craw-chat-runtime-link/specs/: README.md  component.spec.json
crates/craw-chat-runtime-link/src/: lib.rs
crates/im-app-context/: Cargo.toml  README.md
crates/im-app-context/specs/: README.md  component.spec.json
crates/im-app-context/src/: context.rs  dual_token.rs  env.rs  error.rs  headers.rs  jwt.rs  lib.rs  middleware.rs
crates/im-app-context/tests/: app_context_test.rs
crates/im-domain-core/: Cargo.toml  README.md
crates/im-domain-core/specs/: README.md  component.spec.json
crates/im-domain-core/src/: audit.rs  automation.rs  capacity.rs  connection_quality.rs  contact.rs  conversation.rs  device_session.rs  idempotency.rs  interaction.rs  lib.rs  lifecycle.rs  media.rs  message.rs  network_optimization.rs  notification.rs  organization.rs  presence.rs  rate_limiter.rs  realtime.rs  retention.rs  room.rs  rtc.rs  rtc_tests.rs  security.rs  session.rs  social.rs  space.rs  stream.rs
crates/im-domain-core/tests/: conversation_domain_builder_test.rs  model_contract_test.rs  security_contract_test.rs  social_domain_contract_test.rs
crates/im-platform-contracts/: Cargo.toml  README.md
crates/im-platform-contracts/specs/: README.md  component.spec.json
crates/im-platform-contracts/src/: cluster_bus.rs  conversation_aggregate_store.rs  id_generator.rs  lib.rs  message_store.rs  outbox_store.rs  provider.rs  push_provider.rs  retention_scope_store.rs  search_provider.rs  seq_allocator.rs
crates/im-platform-contracts/tests/: agent_device_subject_model_test.rs  ccp_foundation_smoke_test.rs  contract_split_smoke_test.rs  contracts_smoke_test.rs  provider_registry_contract_test.rs  rtc_recording_artifact_contract_test.rs
crates/sdkwork-api-product-runtime/: Cargo.toml  README.md
crates/sdkwork-im-ccp-binding-quic/: Cargo.toml  README.md
crates/sdkwork-im-ccp-binding-tcp/: Cargo.toml  README.md
crates/sdkwork-im-ccp-codec-cbor/: Cargo.toml  README.md
crates/sdkwork-im-cloud-gateway-observability/: Cargo.toml  README.md
crates/sdkwork-im-contract-notification/: Cargo.toml  README.md
crates/sdkwork-im-database-host/: Cargo.toml  README.md
crates/sdkwork-im-database-pool/: Cargo.toml  README.md
crates/sdkwork-im-gateway-assembly/: Cargo.toml  README.md  assembly-manifest.json
crates/sdkwork-im-gateway-observability/: Cargo.toml  README.md
crates/sdkwork-im-iam-application-bootstrap/: Cargo.toml  README.md
crates/sdkwork-im-rpc-service-rust/: Cargo.toml  README.md  build.rs
(+7865 files in other folders)
