[workspace]
members = [
    "adapters/local-disk",
    "adapters/local-memory",
    "adapters/postgres-realtime",
    "adapters/postgres-journal",
    "adapters/redis-cache",
    "adapters/social-postgres",
    "adapters/object-storage-s3",
    "crates/sdkwork-im-contract-admin",
    "crates/sdkwork-im-contract-agent",
    "crates/sdkwork-im-contract-control",
    "crates/sdkwork-im-contract-core",
    "crates/sdkwork-im-contract-message",
    "crates/sdkwork-im-contract-notification",
    "crates/sdkwork-im-contract-stream",
    "crates/sdkwork-im-api-registry",
    "crates/sdkwork-im-gateway-config",
    "crates/sdkwork-im-gateway-observability",
    "crates/sdkwork-im-openapi",
    "crates/sdkwork-im-rpc-service-rust",
    "crates/im-storage-contracts",
    "crates/im-storage-runtime",
    "crates/sdkwork-im-runtime-link",
    "crates/sdkwork-im-runtime-route",
    "crates/sdkwork-im-runtime-id",
    "crates/sdkwork-api-config",
    "crates/sdkwork-api-product-runtime",
    "crates/im-app-context",
    "crates/sdkwork-im-ccp-binding-http",
    "crates/sdkwork-im-ccp-binding-mqtt",
    "crates/sdkwork-im-ccp-binding-sse",
    "crates/sdkwork-im-ccp-binding-ws",
    "crates/sdkwork-im-ccp-codec",
    "crates/sdkwork-im-ccp-codec-cbor",
    "crates/sdkwork-im-ccp-codec-json",
    "crates/sdkwork-im-ccp-control",
    "crates/sdkwork-im-ccp-core",
    "crates/sdkwork-im-ccp-registry",
    "crates/im-domain-core",
    "crates/im-domain-events",
    "crates/im-platform-contracts",
    "crates/im-postgres-realtime-contracts",
    "crates/im-time",
    "services/automation-service",
    "services/audit-service",
    "services/notification-service",
    "services/ops-service",
    "services/governance-service",
    "services/conversation-runtime",
    "services/local-minimal-node",
    "services/media-service",
    "services/projection-service",
    "services/session-gateway",
    "services/social-service",
    "services/streaming-service",
    "services/web-gateway",
    "tools/chat-cli",
]
exclude = [
    "sdks/sdkwork-im-rpc-sdk/sdkwork-im-rpc-sdk-rust",
    "vendor/ciborium-0.2.2",
    "vendor/ciborium-io-0.2.2",
    "vendor/ciborium-ll-0.2.2",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["ws"] }
futures-util = { version = "0.3.32", features = ["sink"] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Internal SDKWork workspace members - declared once at workspace root
im-adapters-local-disk = { path = "adapters/local-disk" }
im-adapters-postgres-journal = { path = "adapters/postgres-journal" }
im-storage-contracts = { path = "crates/im-storage-contracts" }
im-storage-runtime = { path = "crates/im-storage-runtime" }
sdkwork-api-config = { path = "crates/sdkwork-api-config" }
# Cross-repository SDKWork dependencies.
# IM consumes the canonical reusable Rust crates published under
# `sdkwork-appbase/crates/`. The workspace keys below keep IM's short
# import names (`sdkwork_id`, `sdkwork_http_context`) while binding them
# to the real crate paths. See DATABASE_SPEC §6.10 (snowflake ID) and
# IAM_SPEC §2 (layered package boundary) for the contract these crates
# implement.
sdkwork_id = { path = "../sdkwork-appbase/crates/sdkwork-platform-id-service", package = "sdkwork-platform-id-service" }
sdkwork_http_context = { path = "../sdkwork-appbase/crates/sdkwork-platform-http-context-service", package = "sdkwork-platform-http-context-service" }
# IM consumes the provider-plugin-era RTC layout (`crates/sdkwork-rtc-core` +
# `adapters/rtc-*`). That layout was removed from `sdkwork-rtc` `main` at
# commit 4a65da5 ("standardize rtc authority workspace"). To stay buildable
# without rewriting IM's RTC integration against an incompatible newer API,
# the IM-compatible tree is checked out non-destructively into a git worktree
# at `../sdkwork-rtc-im-compat` (rtc commit 1c1ff3b). The `main` checkout at
# `../sdkwork-rtc` is left untouched. A follow-up task should either align IM
# with the new RTC authority layout or pin RTC via a release tag.
sdkwork-rtc-adapter-agora = { path = "../sdkwork-rtc-im-compat/adapters/rtc-agora" }
sdkwork-rtc-adapter-aliyun = { path = "../sdkwork-rtc-im-compat/adapters/rtc-aliyun" }
sdkwork-rtc-adapter-livekit = { path = "../sdkwork-rtc-im-compat/adapters/rtc-livekit" }
sdkwork-rtc-adapter-tencent = { path = "../sdkwork-rtc-im-compat/adapters/rtc-tencent" }
sdkwork-rtc-adapter-volcengine = { path = "../sdkwork-rtc-im-compat/adapters/rtc-volcengine" }
sdkwork-rtc-core = { path = "../sdkwork-rtc-im-compat/crates/sdkwork-rtc-core" }
sdkwork-rtc-app-context = { path = "../sdkwork-rtc-im-compat/crates/sdkwork-rtc-app-context" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
