[package]
name = "im-adapter-iot-access-local"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
craw-chat-contract-core = { path = "../../crates/craw-chat-contract-core" }
im-platform-contracts = { path = "../../crates/im-platform-contracts" }
im-time = { path = "../../crates/im-time" }
