[package]
name = "im-adapter-object-storage-s3"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
sdkwork-im-contract-core = { path = "../../crates/sdkwork-im-contract-core" }
im-platform-contracts = { path = "../../crates/im-platform-contracts" }
im-time = { path = "../../crates/im-time" }
