[package]
name = "im-adapters-postgres-journal"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono = "0.4.44"
im-domain-events = { path = "../../crates/im-domain-events" }
im-platform-contracts = { path = "../../crates/im-platform-contracts" }
postgres = { version = "0.19.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
serde_json.workspace = true
sha2 = "0.10.9"
tokio.workspace = true
