[package]
name = "im-adapters-postgres-journal"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono = "0.4.44"
im-domain-events = { path = "../../crates/im-domain-events" }
im-platform-contracts = { path = "../../crates/im-platform-contracts" }
postgres = { version = "0.19.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
sdkwork_database_config.workspace = true
sdkwork_utils_rust.workspace = true
serde_json.workspace = true
tokio.workspace = true
