[package]
name = "im-adapters-postgres-projection"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
im-domain-core = { path = "../../crates/im-domain-core" }
im-platform-contracts = { path = "../../crates/im-platform-contracts" }
im-time.workspace = true
native-tls = "0.2"
postgres = { version = "0.19.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-native-tls = "0.5"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
sdkwork_database_config.workspace = true
sdkwork_im_database_pool = { workspace = true }
sdkwork-im-contract-core = { path = "../../crates/sdkwork-im-contract-core" }
sdkwork-im-contract-message = { path = "../../crates/sdkwork-im-contract-message" }
sdkwork_utils_rust.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
postgres = { version = "0.19.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde_json.workspace = true
