[package]
name = "im-adapters-postgres-rtc-state"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "PostgreSQL-backed durable state store for RTC call sessions and signals."

[dependencies]
im-domain-core = { path = "../../crates/im-domain-core" }
sdkwork-communication-rtc-service.workspace = true
sdkwork_utils_rust.workspace = true
native-tls = "0.2"
postgres = { version = "0.19.13", features = ["with-serde_json-1"] }
postgres-native-tls = "0.5"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
