[package]
name = "im-adapters-redis-cache"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono = "0.4.44"
im-platform-contracts = { path = "../../crates/im-platform-contracts" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "r2d2"] }
r2d2 = "0.8"
sdkwork-im-contract-control = { path = "../../crates/sdkwork-im-contract-control" }
sdkwork-im-contract-core = { path = "../../crates/sdkwork-im-contract-core" }
sdkwork-im-runtime-route = { path = "../../crates/sdkwork-im-runtime-route" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
