[package]
name = "craw-chat-ccp-codec-cbor"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ciborium = { path = "../../vendor/ciborium-0.2.2" }
craw-chat-ccp-codec = { path = "../craw-chat-ccp-codec" }
craw-chat-ccp-core = { path = "../craw-chat-ccp-core" }
