[package]
name = "im-app-context"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
craw-chat-ccp-core = { path = "../craw-chat-ccp-core" }
base64 = "0.22.1"
hmac = "0.12.1"
serde_json.workspace = true
sdkwork_http_context.workspace = true
sha2 = "0.10"
