[package]
name = "im-app-context"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
sdkwork-im-ccp-core = { path = "../sdkwork-im-ccp-core" }
base64 = "0.22.1"
hmac = "0.12.1"
serde_json.workspace = true
sdkwork_web_core.workspace = true
sha2 = "0.10"
