[package]
name = "im-domain-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono = "0.4.44"
dashmap.workspace = true
im-time = { path = "../im-time" }
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-communication-rtc-service.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio.workspace = true
